testsuite/tests/interpreter_errors/call_property_wrong_return_type/test.out
main.adb
script:2:16: error: Unsupported value type from the introspection API: ANALYSIS_UNIT_VALUE
2 | print(names[1].unit)
  |                ^^^^ 

